# love-letter-playground

./: .gitignore  README.md  mypy.ini  pyproject.toml
love_letter_playground/agents/: random.py
love_letter_playground/interface/: api.py  api2.py  babel.config.json  models.py  package-lock.json  package.json  schema.py  serializers.py  server.py  server2.py  tsconfig.json
love_letter_playground/interface/src/: index.tsx  types.ts
love_letter_playground/interface/src/api/: endpoints.ts
love_letter_playground/interface/src/app/: store.ts
love_letter_playground/interface/src/app/App/: index.tsx
love_letter_playground/interface/src/app/socket/: dispatcher.ts  middleware.ts  slice.ts
love_letter_playground/interface/src/components/: Menu.tsx
love_letter_playground/interface/src/components/App/: index.tsx
love_letter_playground/interface/src/components/Board/: index.tsx
love_letter_playground/interface/src/components/Game/: index.tsx
love_letter_playground/interface/src/components/GameStatus/: index.tsx
love_letter_playground/interface/src/components/Opponents/: index.tsx
love_letter_playground/interface/src/components/PlayerHand/: index.tsx
love_letter_playground/interface/src/components/PlayerHand/SelectionWizard/: index.tsx
love_letter_playground/interface/src/features/game/: selectors.ts  slice.ts
love_letter_playground/interface/src/features/lobby/: Lobby.tsx  slice.ts  types.ts
love_letter_playground/interface/src/redux/: actions.ts  middleware.ts  reducer.ts  selectors.ts
(+20 files in other folders)
