[tool.poe.tasks]
play = { cmd = "flask run", env = { FLASK_APP = "love_letter_playground.interface.server" } }

[tool.poetry]
name = "love-letter-playground"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
stable-baselines3 = "^1.2.0"
sb3-contrib = "^1.2.0"
gym = "^0.21.0"
poethepoet = "^0.10.0"
marshmallow = "^3.10.0"
gym-love-letter = {path = "../../GymEnvs/love-letter/dist/gym_love_letter-0.1.0-py3-none-any.whl"}
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
starlette-csrf = "^1.4.0"
pydantic = "^1.9.0"
nanoid = "^2.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
